src/objects/Zopa_Api_Command__mdt.object
<CustomObject>
    <fields>
        <fullName>Http_Method__c</fullName>
        <label>Http Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsCollectionsCommand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCollectionsCommand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_the_mock_class__c</fullName>
        <label>Name of the mock class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url_Mapping_Contains_Letter_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Url Mapping Contains Letter Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Url_Mapping_Contains_Letter_Send_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Url Mapping Contains Letter Send Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Url_Mapping_Contains_Template_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Url Mapping Contains Template Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Url_Mapping_Contains_Uuid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Url Mapping Contains Uuid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Url_Mapping__c</fullName>
        <label>Url Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Zopa Api Command</label>
    <pluralLabel>Zopa Api Commands</pluralLabel>
</CustomObject>